# simple-sokoban-project

sokoban/: CMakeLists.txt  Readme.md
sokoban/data/: levels.sl
sokoban/src/: globals.cpp  globals.h  graphics.h  images.h  level.cpp  level.h  levels.h  parser.h  player.cpp  player.h  sokoban.cpp  sounds.h
